--- a/exer2_borromeo_b4l/app/src/main/res/values/strings.xml
+++ b/exer2_borromeo_b4l/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">exer2_borromeo_b4l</string>
     <string name="header_text">Which cartoon character are you?</string>
     <string name="tv_logo">TV Logo</string>
+    <string name="start_text">Start</string>
+    <string name="retry_text">Retry</string>
+    <string name="tv_logo">TV Logo</string>
 </resources>
