--- a/exer2_borromeo_b4l/app/src/main/res/values/strings.xml
+++ b/exer2_borromeo_b4l/app/src/main/res/values/strings.xml
@@ -81,14 +81,14 @@
         \n\nMr. Krabs' nemesis and business rival is Sheldon J. Plankton, co-owner of the Chum Bucket with his wife Karen. Plankton was Krabs' best
         friend during childhood, but he is now bent on stealing the Krabby Patty secret formula that makes the Krusty Krab so successful.
     </string>
-    <srtring name="patrick_star">
+    <string name="patrick_star">
         Patrick Star is one of the ten main characters of the SpongeBob SquarePants series. He is SpongeBob\'s best friend as well as one of his two
         neighbors.
         \n\nHe lives under a rock in the underwater city of Bikini Bottom. SpongeBob and Squidward are his two neighbors, with one on each side of
         his residence.
         \n\nBoth he and SpongeBob like to bother Squidward; though they do it unknowingly and have good intentions. He is the son of Herb and
         Margie Star and the brother of Sam Star.
-    </srtring>
+    </string>
     <string name="sam_manson">
         Samantha "Sam" Manson is one of Danny\'s best friends. She is a self-proclaimed Goth who is fascinated with the subliminal and netherworldly,
         and is a very outspoken ultra-recyclo-vegetarian.
